# robin-compiler

./: .gitignore  CMakeLists.txt
include/: ast.h  code_optimization.h  compiler_components.h  compiler_options.h  debugger.h  fa_scanner.h  handcoded_scanner.h  ir_generator.h  json.h  ll1_parser.h  non_terminal.h  parser_base.h  recursive_decent_parser.h  robin_compiler.h  scanner_base.h  semantic_analyzer.h  symbol.h  symbol_table.h  token.h  type_checker.h  wren_compiler.h
include/compiler/: robin_compiler.h
include/compiler/core/: ast.h  compiler_options.h  non_terminal.h  symbol.h  token.h
include/compiler/ir-generation/: ir_generator.h
include/compiler/lexical/: fa_scanner.h  handcoded_scanner.h  scanner_base.h
include/compiler/optimization/: code_optimization.h
include/compiler/semantic/: semantic_analyzer.h  symbol_table.h  type_checker.h
include/compiler/syntax/: ll1_parser.h  parser_base.h  recursive_decent_parser.h
include/jsonrpc/core/: decoding.h  encoding.h  keywords.h  values.h
include/jsonrpc/protocol/: constants.h  messages.h
include/jsonrpc/transport/: receiving.h  sending.h
include/jsonrpc/utils/: convert.h  stringify.h
include/lsp/core/: methods.h
include/lsp/lifecycle/: start.h
include/lsp/methods/: initialize.h  tokenize.h
include/robin/: compiler.h
include/robin/core/: ast.h  non_terminal.h  options.h  symbol.h  token.h
include/robin/ir-generation/: ir_generator.h
include/robin/lexical/: fa_scanner.h  handcoded_scanner.h  scanner_base.h
include/utils/: debugger.h  file_reader.h
src/: debugger.cpp  fa_scanner.cpp  handcoded_scanner.cpp  main.cpp  scanner_base.cpp  wren_compiler.cpp
src/compiler/: compiler_options.cpp  robin_compiler.cpp
src/constants/: ast.cpp  symbol.cpp  symbol_table.cpp  tokens.cpp
src/helpers/: json.cpp
src/ir_generator/: ir_generator.cpp
src/optimization/: code_optimization.cpp
src/parser/: ll1_parser.cpp  parser_base.cpp  recursive_decent_parser.cpp
src/robin/: compiler.cpp
src/scanner/: fa_scanner.cpp  handcoded_scanner.cpp  scanner_base.cpp
src/semantic/: semantic_analyzer.cpp  type_checker.cpp
src/utils/: debugger.cpp  file_reader.cpp
(+49 files in other folders)
